Re-add featured script to the auto run list
It was removed in 38ac044 when featured was moved into scripts/archive.

Also tidy other parts of that commit, including adding a deprecation
warning to the featured.py script.

Bug: T128955
Change-Id: I1e373b9229b479227e3df30b51cb20915d1f0c47

--- a/scripts/archive/README
+++ b/scripts/archive/README
@@ -1,1 +1,6 @@
-This folder consists scripts that will not maintened but we keep them for historical reasons.
+This folder consists scripts that will not be improved, but are kept for
+backwards compatibility with a deprecation notice.
+
+featured.py is no longer compatible with Wikimedia sites, and no other wiki
+online could be found that is compatible with this script.
+See https://phabricator.wikimedia.org/T128955 for more information.
